# ai_api_template

./: README.md  cookiecutter.json
{{cookiecutter.model_name}}/: Dockerfile  README.md  conftest.py  main.py  pyproject.toml
{{cookiecutter.model_name}}/api/v1/routers/: health.py
{{cookiecutter.model_name}}/core/: config.py
{{cookiecutter.model_name}}/schemas/: __init__.py  errors.py  health.py
{{cookiecutter.model_name}}/tests/: test_main.py
